# argon2

./: .gitignore  Changelog.md  LICENSE  Tests.hs  argon2.cabal  cabal.project  default.nix  shell.nix
phc-winner-argon2/include/: argon2.h  hs_argon2_mangling.h
phc-winner-argon2/src/: core.c  thread.h
phc-winner-argon2/src/blake2/: blake2.h  blake2b.c
src-tests/: Tests.hs
src/Crypto/: Argon2.hs
src/Crypto/Argon2/: FFI.hsc
