cabal-version:       1.12
name:                argon2
version:             1.2.0

synopsis:            Haskell bindings to libargon2 - the reference implementation of the Argon2 password-hashing function
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ollie Charles
maintainer:          Herbert Valerio Riedel <hvr@gnu.org>
homepage:            https://github.com/hvr/argon2/issues
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  Changelog.md

extra-source-files: phc-winner-argon2/src/blake2/blake2.h
                    phc-winner-argon2/src/blake2/blake2-impl.h
                    phc-winner-argon2/src/blake2/blamka-round-ref.h
                    phc-winner-argon2/include/argon2.h

source-repository head
  type:     git
  location: https://github.com/hvr/argon2.git

flag use-system-library
  description: Link against system @libargon2@ library rather than embedded copy
  default: False
  manual: True

library
  default-language:    Haskell2010
  exposed-modules:     Crypto.Argon2.FFI
                       Crypto.Argon2

  build-depends:       base         >= 4.8 && < 4.11
                     , bytestring   == 0.10.*
                     , text         == 1.2.*
                     , transformers >= 0.4.2 && < 0.6

  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(use-system-library)
    extra-libraries: argon2
  else
    c-sources: phc-winner-argon2/src/argon2.c
               phc-winner-argon2/src/core.c
               phc-winner-argon2/src/blake2/blake2b.c
               phc-winner-argon2/src/thread.c
               phc-winner-argon2/src/ref.c
               phc-winner-argon2/src/encoding.c
               phc-winner-argon2/src/encoding.h
               phc-winner-argon2/src/core.h
               phc-winner-argon2/src/thread.h
               phc-winner-argon2/src/ref.h

    include-dirs: phc-winner-argon2/src
                  phc-winner-argon2/include

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: src-tests
  main-is: Tests.hs
  build-depends: argon2
               , base
               , QuickCheck >= 2.0
               , tasty-quickcheck
               , tasty
               , bytestring
               , text
